; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cabinet/extr_fdi.c_NONEfdi_decomp.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cabinet/extr_fdi.c_NONEfdi_decomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DECR_ILLEGALDATA = common dso_local global i32 0, align 4
@CAB_BLOCKMAX = common dso_local global i32 0, align 4
@DECR_DATAFORMAT = common dso_local global i32 0, align 4
@outbuf = common dso_local global i32 0, align 4
@inbuf = common dso_local global i32 0, align 4
@DECR_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @NONEfdi_decomp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @NONEfdi_decomp(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @DECR_ILLEGALDATA, align 4
  store i32 %12, i32* %4, align 4
  br label %28

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @CAB_BLOCKMAX, align 4
  %16 = icmp sgt i32 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* @DECR_DATAFORMAT, align 4
  store i32 %18, i32* %4, align 4
  br label %28

19:                                               ; preds = %13
  %20 = load i32, i32* @outbuf, align 4
  %21 = call i32 @CAB(i32 %20)
  %22 = load i32, i32* @inbuf, align 4
  %23 = call i32 @CAB(i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = call i32 @memcpy(i32 %21, i32 %23, i64 %25)
  %27 = load i32, i32* @DECR_OK, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %19, %17, %11
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @memcpy(i32, i32, i64) #1

declare dso_local i32 @CAB(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
